# try-devutils

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  package.json.snippet.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.extension.ts  vite.config.ts
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-vercel.yml  release-desktop.yml
extension/: background.ts  index.html  manifest.json
public/: robots.txt  sitemap.xml
public/privacy/: index.html
scripts/: sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CodeEditor.tsx  CommandPalette.tsx  DesktopLayout.tsx  FloatingToolCards.tsx  FloatingUtilCards.tsx  JsonLinter.tsx  JsonTreeView.tsx  KeyboardShortcuts.tsx  Layout.tsx  RecentTools.tsx  RecentUtils.tsx  ToolCard.tsx  UtilCard.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/tabs/: ConvertTab.tsx  DiffTab.tsx  FormatterTab.tsx  PathQueryTab.tsx  SchemaTab.tsx  TreeViewTab.tsx
src/components/tools/: Base64Converter.tsx  (+21 more)
src/hooks/: use-shared-json-input.ts  use-tauri.ts
src/lib/: json-validator.ts  lazyTools.ts  lazyUtils.ts  platform.ts  stringUtils.ts  tools.ts  utils.ts
src/pages/: Index.tsx  NotFound.tsx  PrivacyRedirect.tsx  ToolPage.tsx  UtilPage.tsx
src/utils/: commandProcessor.ts
tests/: console-errors.spec.ts
(+26 files in other folders)
