[package]
name = "trydevutils-desktop"
version = "0.1.0"
description = "TryDevUtils - Essential Developer Utilities (Desktop)"
authors = ["TryDevUtils"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "trydevutils_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
